| Bug #32657 | Debug output for backup PTR feature contains invalid characters | ||
|---|---|---|---|
| Submitted: | 23 Nov 2007 13:15 | Modified: | 26 Feb 2008 0:49 |
| Reporter: | Chuck Bell | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Backup | Severity: | S3 (Non-critical) |
| Version: | 6.0 | OS: | Any |
| Assigned to: | Chuck Bell | CPU Architecture: | Any |
[26 Nov 2007 9:09]
Sergei Golubchik
Pardon me, but how a keyword (key-WORD) can contain "spaces" or "colons" ? If you're misusing the API, it won't work, not surprisingly.
[12 Dec 2007 20:30]
Chuck Bell
Fixing all DBUG_PRINT statements in backup code.
[12 Dec 2007 21:31]
Chuck Bell
Patch ready for review. See http://lists.mysql.com/commits/39826.
[13 Dec 2007 14:18]
Rafal Somla
Good to push.
[25 Feb 2008 20:19]
Bugs System
Pushed into 6.0.5-alpha
[26 Feb 2008 0:49]
Paul DuBois
No user-visible significance. No changelog entry needed.

Description: When one attempts to use --debug=d,keyword where keyword is 'SYNC PHASE - binlog filename :' it does not work. Unfortunately such keyword has ":" inside, which is the separator of debug options (like in --debug=d:t:i:o), so it won't work. How to repeat: Attempt debug trace with --debug-d:SYNC PHASE - binlog filename ::t:i:o ^^ Suggested fix: Remove the ":" and, while we're at it, also spaces from the keyword.