BUG#32657 : Debug output for backup PTR feature contains invalid characters

This patch removes spaces and special characters from all debug
keywords. This allows correct debug tracing of the backup code.